tests/paczka1/small_fuzzy/50795795.err
Error in line 1: b1GIyPi46w S54 8,3
Error in line 5: Lag1VQ2wnAR S183 26,1
Error in line 4: bpp80EZ3Z S713 19,8
